recursion.lessons.recursion.dragoncurve.DragonCurve2.scala.error
DragonCurve2:10: error: not found: value u
			u = (x + z)/2 + (t - y)/2
                        ^DragonCurve2:11: error: not found: value v
			v = (y + t)/2 - (z - x)/2
                        ^DragonCurve2:12: error: not found: value u
			dragon(order-1, x, y, u, v)
                                              ^DragonCurve2:13: error: not found: value u
			dragonInverse(order-1, z, t, u, v)
                                                     ^DragonCurve2:26: error: not found: value u
			u = (x + z)/2 - (t - y)/2
                        ^DragonCurve2:27: error: not found: value v
			v = (y + t)/2 + (z - x)/2
                        ^DragonCurve2:28: error: not found: value u
			dragonInverse(order-1, u, v, z, t)
                                               ^DragonCurve2:29: error: not found: value u
			dragon(order-1, u, v, x, y)
                                        ^