recursion.lessons.recursion.dragoncurve.DragonCurve2.scala.code
def dragon(order:Int, x:Double, y:Double, z:Double, t:Double) {
	setCouleur(Color.red)
	order match {
		case 1 => {
			setPos(x, y)
			allerVers(z, t)
		}
		case _ => {
			u = (x + z)/2 + (t - y)/2
			v = (y + t)/2 - (z - x)/2
			dragon(order-1, x, y, u, v)
			dragonInverse(order-1, z, t, u, v)
		}
	}
}

def dragonInverse(order:Int, x:Double, y:Double, z:Double, t:Double) {
	setCouleur(Color.blue)
	order match {
		case 1 => {
			setPos(z, t)
			allerVers(x, y)
		}
		case _ => {
			u = (x + z)/2 - (t - y)/2
			v = (y + t)/2 + (z - x)/2
			dragonInverse(order-1, u, v, z, t)
			dragon(order-1, u, v, x, y)
		}
	}
}
